--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="../㉓/images/favicon.png">
     <link rel="stylesheet" href="https://unpkg.com/ress@4.0.0/dist/ress.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Philosopher&family=Sawarabi+Mincho&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>sample sea -home-</title>
 </head>
 <body>
