--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="#">
-    <link rel="icon" type="image/png" href="../㉓/images/favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="https://unpkg.com/ress@4.0.0/dist/ress.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Philosopher&family=Sawarabi+Mincho&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
@@ -15,7 +15,7 @@
 <body>
     <div id="home" class="big-bg">
         <header class="page-header wrapper">
-            <h1><a href="index.html"><img class="logo" src="../㉓/images/logo.svg" alt="WCBロゴ"></a></h1>
+            <h1><a href="index.html"><img class="logo" src="logo.svg" alt="WCBロゴ"></a></h1>
             <nav>
                 <ul class="main-nav">
                     <li><a href="news.html">NEWS</a></li>
