--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://unpkg.com/ress@4.0.0/dist/ress.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Philosopher&family=Sawarabi+Mincho&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
-    <title>sample sea -home-</title>
+    <title>Horizon -home-</title>
 </head>
 <body>
     <div id="home" class="big-bg">
@@ -25,7 +25,7 @@
             </nav>
         </header>
         <div class="home-content wrapper">
-                <h2 class="page-title">Sample Sea</h2>
+                <h2 class="page-title">Horizon</h2>
                 <p>
                     吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。
                 </p>
